--- a/OPOLEbiegaPL.Model/OPOLEbiegaPL.Model.csproj
+++ b/OPOLEbiegaPL.Model/OPOLEbiegaPL.Model.csproj
@@ -40,6 +40,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Achievement.cs" />
+    <Compile Include="Announcement.cs" />
+    <Compile Include="Event.cs" />
+    <Compile Include="Friend.cs" />
+    <Compile Include="IEntity.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
