--- a/OPOLEbiegaPL.API/OPOLEbiegaPL.API.csproj
+++ b/OPOLEbiegaPL.API/OPOLEbiegaPL.API.csproj
@@ -86,6 +86,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AnnouncementApiController.cs" />
+    <Compile Include="Controllers\BaseApiController.cs" />
+    <Compile Include="Controllers\EventApiContriller.cs" />
+    <Compile Include="Controllers\FriendApiController.cs" />
+    <Compile Include="Controllers\PersonApiController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -102,8 +107,17 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OPOLEbiegaPL.Data\OPOLEbiegaPL.Data.csproj">
+      <Project>{5695C991-0C3E-4B4E-8597-904617F6425E}</Project>
+      <Name>OPOLEbiegaPL.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\OPOLEbiegaPL.Model\OPOLEbiegaPL.Model.csproj">
+      <Project>{27471C2F-4790-466E-93C6-2005DF63CB5A}</Project>
+      <Name>OPOLEbiegaPL.Model</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
