Add necessary libraries and create test views
- bootstrap
- font-awesome
- jquery 3.1.0

--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,14 @@ _[Ss]cripts
 *.nupkg
 *.ncrunchsolution
 *.dot[Cc]over
+
+#ignore node_modules
+/OPOLEbiegaPL.Web/node_modules
+
+# Ignore bundler config.
+/.bundle
+
+# Ignore hot-update files
+*.hot-update.json
+*.hot-update.js
+
