--- a/OPOLEbiegaPL.Web/package.json
+++ b/OPOLEbiegaPL.Web/package.json
@@ -31,7 +31,11 @@
     "immutable": "^3.8.1",
     "react": "^15.3.0",
     "react-addons-pure-render-mixin": "^15.3.0",
+    "react-addons-linked-state-mixin": "^15.3.0 ",
+    "react-bootstrap": "^0.30.2",
     "react-dom": "^15.3.0",
+    "react-fontawesome": "^1.1.0",
+    "react-icons": "^2.2.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.0.0",
     "redux": "^3.5.2",
