--- a/OPOLEbiegaPL.Web/packages.config
+++ b/OPOLEbiegaPL.Web/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="font-awesome" version="4.6.1" targetFramework="net461" />
+  <package id="FontAwesome" version="4.6.3" targetFramework="net461" />
   <package id="jQuery" version="3.1.0" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.1" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net461" developmentDependency="true" />
+  <package id="react.js" version="0.14.7" targetFramework="net461" />
 </packages>
