--- a/OPOLEbiegaPL.Web/package.json
+++ b/OPOLEbiegaPL.Web/package.json
@@ -38,7 +38,6 @@
     "react-icons": "^2.2.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.0.0",
-    "redux": "^3.5.2",
-    "socket.io-client": "^1.4.8"
+    "redux": "^3.5.2"
   }
 }
