--- a/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
+++ b/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
@@ -112,6 +112,7 @@
     <Content Include="src\helpers\fetchHelpers.js" />
     <Content Include="src\helpers\inputHelpers.js" />
     <Content Include="src\helpers\styles.js" />
+    <Content Include="src\helpers\toastrHelper.js" />
     <Content Include="src\reducer.js" />
     <Content Include="src\remote_action_middleware.js" />
     <Content Include="Webpack.config.js" />
