--- a/OPOLEbiegaPL.Web/package.json
+++ b/OPOLEbiegaPL.Web/package.json
@@ -37,6 +37,7 @@
     "react-fontawesome": "^1.1.0",
     "react-icons": "^2.2.1",
     "react-redux": "^4.4.5",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "react-redux-toastr": "^3.6.3"
   }
 }
