--- a/OPOLEbiegaPL.Web/package.json
+++ b/OPOLEbiegaPL.Web/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^2.2.1",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
-    "react-redux-toastr": "^3.6.3"
+    "react-redux-toastr": "^3.6.3",
+    "react-router": "^2.7.0"
   }
 }
