Split reducers and action creators to be responsible for smaller parts of app

--- a/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
+++ b/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
@@ -108,12 +108,19 @@
     <Content Include="Scripts\react\react-with-addons.min.js" />
     <Content Include="Scripts\react\react.js" />
     <Content Include="Scripts\react\react.min.js" />
-    <Content Include="src\action_creators.js" />
-    <Content Include="src\helpers\fetchHelpers.js" />
-    <Content Include="src\helpers\inputHelpers.js" />
+    <Content Include="src\actions\contact_actions.js" />
+    <Content Include="src\actions\modal_actions.js" />
+    <Content Include="src\actions\global_actions.js" />
+    <Content Include="src\helpers\fetchHelper.js" />
+    <Content Include="src\helpers\componentHelper.js" />
     <Content Include="src\helpers\styles.js" />
     <Content Include="src\helpers\toastrHelper.js" />
-    <Content Include="src\reducer.js" />
+    <Content Include="src\reducers\announcements_reducer.js" />
+    <Content Include="src\reducers\events_reducer.js" />
+    <Content Include="src\reducers\friends_reducer.js" />
+    <Content Include="src\reducers\persons_reducer.js" />
+    <Content Include="src\reducers\reducer.js" />
+    <Content Include="src\reducers\modal_reducer.js" />
     <Content Include="src\remote_action_middleware.js" />
     <Content Include="Webpack.config.js" />
     <Content Include="src\index.jsx" />
