create specific actions for friends, transform modal window to get object by url from parent component

--- a/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
+++ b/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
@@ -109,8 +109,10 @@
     <Content Include="Scripts\react\react.js" />
     <Content Include="Scripts\react\react.min.js" />
     <Content Include="src\actions\contact_actions.js" />
+    <Content Include="src\actions\friends_actions.js" />
     <Content Include="src\actions\modal_actions.js" />
     <Content Include="src\actions\global_actions.js" />
+    <Content Include="src\constants\action_types.js" />
     <Content Include="src\helpers\fetchHelper.js" />
     <Content Include="src\helpers\componentHelper.js" />
     <Content Include="src\helpers\styles.js" />
