Create urls constants

--- a/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
+++ b/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
@@ -113,6 +113,7 @@
     <Content Include="src\actions\modal_actions.js" />
     <Content Include="src\actions\global_actions.js" />
     <Content Include="src\constants\action_types.js" />
+    <Content Include="src\constants\urls.js" />
     <Content Include="src\helpers\fetchHelper.js" />
     <Content Include="src\helpers\componentHelper.js" />
     <Content Include="src\helpers\styles.js" />
