--- a/OPOLEbiegaPL.Web/package.json
+++ b/OPOLEbiegaPL.Web/package.json
@@ -39,6 +39,7 @@
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "react-redux-toastr": "^3.6.3",
-    "react-router": "^2.7.0"
+    "react-router": "^2.7.0",
+    "formsy-react": "^0.18.1"
   }
 }
