--- a/OPOLEbiegaPL.Web/package.json
+++ b/OPOLEbiegaPL.Web/package.json
@@ -40,6 +40,7 @@
     "redux": "^3.5.2",
     "react-redux-toastr": "^3.6.3",
     "react-router": "^2.7.0",
-    "formsy-react": "^0.18.1"
+    "formsy-react": "^0.18.1",
+    "nuka-carousel": "^2.0.3"
   }
 }
