--- a/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
+++ b/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
@@ -114,14 +114,17 @@
     <Content Include="src\friends\actions\friends_actions.js" />
     <Content Include="src\modal\actions\modal_actions.js" />
     <Content Include="src\persons\actions\persons_actions.js" />
+    <Content Include="src\modal\components\EditModal.jsx" />
     <Content Include="src\shared\components\inputs\Email.js" />
     <Content Include="src\shared\components\inputs\Phone.js" />
     <Content Include="src\shared\constants\action_types.js" />
+    <Content Include="src\shared\constants\initialStates.js" />
     <Content Include="src\shared\constants\request_types.js" />
     <Content Include="src\shared\constants\urls.js" />
     <Content Include="src\shared\helpers\fetchHelper.js" />
     <Content Include="src\shared\helpers\componentHelper.js" />
     <Content Include="src\shared\constants\styles.js" />
+    <Content Include="src\shared\helpers\stateHelper.js" />
     <Content Include="src\shared\helpers\toastrHelper.js" />
     <Content Include="src\announcements\reducers\announcements_reducer.js" />
     <Content Include="src\events\reducers\events_reducer.js" />
@@ -144,9 +147,10 @@
     <Content Include="src\shared\components\App.jsx" />
     <Content Include="src\home\components\Home.jsx" />
     <Content Include="src\friends\components\FriendEdit.jsx" />
-    <Content Include="src\modal\components\Modal.jsx" />
+    <Content Include="src\modal\components\DetailsModal.jsx" />
     <Content Include="src\shared\components\Footer.jsx" />
     <Content Include="src\persons\components\Person.jsx" />
+    <Content Include="src\persons\components\PersonDetails.jsx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
