--- a/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
+++ b/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
@@ -113,8 +113,8 @@
     <Content Include="src\events\actions\events_actions.js" />
     <Content Include="src\friends\actions\friends_actions.js" />
     <Content Include="src\modal\actions\modal_actions.js" />
+    <None Include="src\modal\components\Modal.jsx" />
     <Content Include="src\persons\actions\persons_actions.js" />
-    <Content Include="src\modal\components\EditModal.jsx" />
     <Content Include="src\shared\components\inputs\Email.js" />
     <Content Include="src\shared\components\inputs\Phone.js" />
     <Content Include="src\shared\constants\action_types.js" />
@@ -147,7 +147,6 @@
     <Content Include="src\shared\components\App.jsx" />
     <Content Include="src\home\components\Home.jsx" />
     <Content Include="src\friends\components\FriendEdit.jsx" />
-    <Content Include="src\modal\components\DetailsModal.jsx" />
     <Content Include="src\shared\components\Footer.jsx" />
     <Content Include="src\persons\components\Person.jsx" />
     <Content Include="src\persons\components\PersonDetails.jsx" />
