Create Input controller with own onChange method - remove this method from helpers

--- a/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
+++ b/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
@@ -151,6 +151,7 @@
     <Content Include="src\persons\components\Person.jsx" />
     <Content Include="src\persons\components\PersonDetails.jsx" />
     <Content Include="src\shared\components\inputs\Button.jsx" />
+    <Content Include="src\shared\components\inputs\Input.jsx" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
