--- a/OPOLEbiegaPL.API/OPOLEbiegaPL.API.csproj
+++ b/OPOLEbiegaPL.API/OPOLEbiegaPL.API.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Controllers\EventApiContriller.cs" />
     <Compile Include="Controllers\FriendApiController.cs" />
     <Compile Include="Controllers\PersonApiController.cs" />
+    <Compile Include="Controllers\PlaceApiController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
