--- a/OPOLEbiegaPL.Data/OPOLEbiegaPL.Data.csproj
+++ b/OPOLEbiegaPL.Data/OPOLEbiegaPL.Data.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="AnnouncementRepository.cs" />
     <Compile Include="EventRepository.cs" />
+    <Compile Include="PlaceRepository.cs" />
     <Compile Include="Stores\AnnouncementStore.cs" />
     <Compile Include="Stores\EventStore.cs" />
     <Compile Include="Stores\FriendStore.cs" />
@@ -51,6 +52,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoryBase.cs" />
     <Compile Include="Stores\PersonStore.cs" />
+    <Compile Include="Stores\PlaceStore.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OPOLEbiegaPL.Model\OPOLEbiegaPL.Model.csproj">
