--- a/OPOLEbiegaPL.Model/OPOLEbiegaPL.Model.csproj
+++ b/OPOLEbiegaPL.Model/OPOLEbiegaPL.Model.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Friend.cs" />
     <Compile Include="IEntity.cs" />
     <Compile Include="Person.cs" />
+    <Compile Include="Place.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
