--- a/OPOLEbiegaPL.Web/package.json
+++ b/OPOLEbiegaPL.Web/package.json
@@ -41,6 +41,7 @@
     "react-redux-toastr": "^3.6.3",
     "react-router": "^2.7.0",
     "formsy-react": "^0.18.1",
-    "nuka-carousel": "^2.0.3"
+    "nuka-carousel": "^2.0.3",
+    "react-responsive":  "^1.1.4"
   }
 }
