Update Friend fake store, add Slider to friends view

--- a/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
+++ b/OPOLEbiegaPL.Web/OPOLEbiegaPL.Web.csproj
@@ -113,6 +113,7 @@
     <Content Include="src\events\actions\events_actions.js" />
     <Content Include="src\friends\actions\friends_actions.js" />
     <Content Include="src\modal\actions\modal_actions.js" />
+    <Content Include="src\friends\components\Friend.jsx" />
     <None Include="src\modal\components\Modal.jsx" />
     <Content Include="src\persons\actions\persons_actions.js" />
     <Content Include="src\places\components\Places.jsx" />
@@ -120,6 +121,7 @@
     <None Include="src\shared\components\inputs\Phone.jsx" />
     <Content Include="src\places\actions\places_actions.js" />
     <Content Include="src\places\reducers\places_reducer.js" />
+    <Content Include="src\shared\components\common\Slider.js" />
     <Content Include="src\shared\constants\action_types.js" />
     <Content Include="src\shared\constants\initialStates.js" />
     <Content Include="src\shared\constants\menu_items.js" />
